avoid logo overlaps

--- a/public/components/layout/_layout.global.css
+++ b/public/components/layout/_layout.global.css
@@ -31,6 +31,9 @@
   display: block;
   color: inherit;
   text-decoration: none;
+  @media (--viewport-max-mobile-medium) {
+    padding-right: 3em; /*avoid overlaps with the logo*/
+  }
   & + .layout-header {
     margin-top: calc(var(--size-baseline-vertical) / -2);
   }
